--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
     "deploy": "wrangler deploy --minify"
   },
   "dependencies": {
-    "hono": "^4.6.4"
+    "@types/uuid": "^10.0.0",
+    "hono": "^4.6.4",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20240925.0",
